Added topic details

--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -248,19 +248,19 @@
                     <a [routerLink]="['topics/datastructures']" data-filter-item data-filter-name="datastructures">datastructures</a>
                   </li>
                   <li>
-                    <a  class="unfinished" [routerLink]="['topics/differentmethods']" data-filter-item data-filter-name="differentmethods">differentmethods</a>
+                    <a [routerLink]="['topics/differentmethods']" data-filter-item data-filter-name="differentmethods">differentmethods</a>
                   </li>              
                   <li>
-                    <a  class="unfinished" [routerLink]="['topics/dom']" data-filter-item data-filter-name="dom">dom</a>
+                    <a [routerLink]="['topics/dom']" data-filter-item data-filter-name="dom">dom</a>
                   </li> 
                   <li>
-                    <a  class="unfinished" [routerLink]="['topics/eventbubbling']" data-filter-item data-filter-name="eventbubbling">eventbubbling</a>
+                    <a [routerLink]="['topics/eventbubbling']" data-filter-item data-filter-name="eventbubbling">eventbubbling</a>
                   </li> 
                   <li>
-                    <a  class="unfinished" [routerLink]="['topics/eventmethods']" data-filter-item data-filter-name="eventmethods">eventmethods</a>
+                    <a [routerLink]="['topics/eventmethods']" data-filter-item data-filter-name="eventmethods">eventmethods</a>
                   </li> 
                   <li>
-                    <a  class="unfinished" [routerLink]="['topics/higherorderfunctions']" data-filter-item data-filter-name="higherorderfunctions">higherorderfunctions</a>
+                    <a [routerLink]="['topics/higherorderfunctions']" data-filter-item data-filter-name="higherorderfunctions">higherorderfunctions</a>
                   </li> 
                   <li>
                     <a [routerLink]="['topics/primitvedatatype']" data-filter-item data-filter-name="primitvedatatype">primitvedatatype</a>
