--- a/src/app/topics/differentmethods/differentmethods.component.html
+++ b/src/app/topics/differentmethods/differentmethods.component.html
@@ -2,5 +2,31 @@
     <div class="container-fluid default-bar">
       <h2>what is ‘apply’, ‘call’, and ‘bind’ Methods? what are their practical usage? please provide examples</h2>
       <hr>
+
+      <h4>Call():</h4>
+      <p>call(this [, arg1, arg2...]): Calls a function with a provided this. Further arguments are provided as a comma separated list.</p>
+      <p>The method Call invokes the function and allows you to pass in arguments one by one using commas.</p>
+
+
+      <h4>Apply():</h4>
+      <p>call(this [, arg1, arg2...]): Calls a function with a provided this. Further arguments are provided as a comma separated list.</p>
+      <p>The method Apply invokes the function and allows you to pass in arguments as an array.</p>
+
+
+      <h4>Bind():</h4>
+      <p>bind(this): Returns a new function whose this value is bound to the provided value.</p>
+      <p>The Bind method returns a new function, allowing you to pass in a this array and any number of arguments. Use it when you want that function to later be called with a certain context like events.</p>
+
+      <h3 class="mt-4">Hands-on link:</h3>
+          <hr>
+          <a href="https://stackblitz.com/edit/js-bind-apply-call" target="_blank">stackblitz</a><br />
+          <a href="https://stackblitz.com/edit/call-apply-bind-method" target="_blank">stackblitz</a>
+      <h3 class="mt-4">Usefull links:</h3>
+      <hr>
+      <ul>
+          <li><a href="https://www.tothenew.com/blog/call-vs-apply-vs-bind/" target="_blank">tothenew</a></li>
+          <li><a href="https://www.freecodecamp.org/news/the-difference-between-javascripts-call-apply-and-bind-methods-4e69917f77bd/" target="_blank">freecodecamp</a></li>
+      </ul>
+
     </div>
 </main>
