--- a/src/app/topics/dom/dom.component.html
+++ b/src/app/topics/dom/dom.component.html
@@ -2,5 +2,16 @@
     <div class="container-fluid default-bar">
       <h2>how dom works in angular?</h2>
       <hr>
+
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/uwHE67T8NfM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/W-STLqbopaQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+      <h3 class="mt-4">Usefull links:</h3>
+      <hr>
+      <ul>
+          <li><a href="https://blog.nrwl.io/understanding-angular-ivy-incremental-dom-and-virtual-dom-243be844bf36" target="_blank">nrwl</a></li>
+          <li><a href="https://medium.com/@sardanalokesh/understanding-dom-manipulation-in-angular-2b0016a4ee5d" target="_blank">medium</a></li>
+      </ul>
+
     </div>
 </main>
