--- a/src/app/topics/higherorderfunctions/higherorderfunctions.component.html
+++ b/src/app/topics/higherorderfunctions/higherorderfunctions.component.html
@@ -2,5 +2,13 @@
     <div class="container-fluid default-bar">
       <h2>what is higher order functions in angular? what are their practical usage? please provide examples</h2>
       <hr>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/O9lMynNdka4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <h3 class="mt-4">Usefull links:</h3>
+      <hr>
+      <ul>
+          <li><a href="https://blog.bitsrc.io/understanding-higher-order-functions-in-javascript-75461803bad" target="_blank">bitsrc</a></li>
+          <li><a href="https://medium.com/@cecelia_online/higher-order-components-in-angular-7-37edcd4c51fe" target="_blank">medium</a></li>
+      </ul>
+
     </div>
 </main>
