--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -368,6 +368,12 @@
                   <li>
                     <a  class="unfinished" [routerLink]="['topics/transducers']" data-filter-item data-filter-name="transducers">transducers</a>
                   </li>
+                  <li>
+                    <a  class="unfinished" [routerLink]="['topics/generators']" data-filter-item data-filter-name="generators">generators</a>
+                  </li>
+                  <li>
+                    <a  class="unfinished" [routerLink]="['topics/preload']" data-filter-item data-filter-name="preload">pre-load modules</a>
+                  </li>
                 </ul>
               </div>
             </li>
