--- a/src/app/topics/emitters/emitters.component.html
+++ b/src/app/topics/emitters/emitters.component.html
@@ -31,6 +31,7 @@
           <li><a href="https://ultimatecourses.com/blog/component-events-event-emitter-output-angular-2" target="_blank">ultimatecourses</a></li>
           <li><a href="https://netbasal.com/event-emitters-in-angular-13e84ee8d28c" target="_blank">netbasal</a></li>
           <li><a href="https://angular.io/api/core/EventEmitter" target="_blank">angular.io</a></li>
+          <li><a href="https://stackoverflow.com/questions/40238549/angular-2-event-emitters-vs-subject" target="_blank">event emitter vs subject</a></li>
       </ul>
 
 
