--- a/src/app/topics/ngzone/ngzone.component.html
+++ b/src/app/topics/ngzone/ngzone.component.html
@@ -2,7 +2,7 @@
     <div class="container-fluid default-bar">
       <h2>What is NgZone? What would be a good use for NgZone service?</h2>
       <a href="https://blog.thoughtram.io/angular/2017/02/21/using-zones-in-angular-for-better-performance.html" target="_blank">I read this article here</a>
-     
+      <a href="https://medium.com/better-programming/zone-js-for-angular-devs-573d89bbb890" target="_blank">what is Zone.js?</a>
       <hr>
     </div>
 </main>
