--- a/src/app/topics/observable/observable.component.html
+++ b/src/app/topics/observable/observable.component.html
@@ -12,6 +12,7 @@
           <ul>
               <li><a href="https://rxjs-dev.firebaseapp.com/guide/observable" target="_blank">rxjs-link</a></li>
               <li><a href="https://angular.io/guide/rx-library" target="_blank">angular.io</a></li>
+              <li><a href="https://stackoverflow.com/questions/47537934/what-is-the-difference-between-a-observable-and-a-subject-in-rxjs" target="_blank">observable vs subject</a></li>
           </ul>
         </div>
       </div>
