--- a/src/app/topics/primitvedatatype/primitvedatatype.component.html
+++ b/src/app/topics/primitvedatatype/primitvedatatype.component.html
@@ -16,6 +16,8 @@
       <li><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures" target="_blank">developer.mozilla</a></li>
       <li><a href="https://developer.mozilla.org/en-US/docs/Glossary/Primitive"
           target="_blank">developer.mozilla</a></li>
+          <li><a href="https://medium.com/@junshengpierre/javascript-primitive-values-object-references-361cfc1cbfb0" target="_blank">meduim</a></li>
+
     </ul>
   </div>
 </main>
