--- a/src/app/topics/scopehierarchy/scopehierarchy.component.html
+++ b/src/app/topics/scopehierarchy/scopehierarchy.component.html
@@ -17,6 +17,12 @@
           <li><a href="https://angular.io/guide/hierarchical-dependency-injection" target="_blank">angular</a></li>
           <li><a href="https://www.tutorialsteacher.com/angularjs/angularjs-scope" target="_blank">tutorialsteacher</a></li>
       </ul>
-
+      <p>
+        Introduction to Scope in JavaScript
+      </p>
+      <ul>
+        <li><a href="https://levelup.gitconnected.com/introduction-to-scope-in-javascript-faf174dd6b1b" target="_blank">scope in javascript</a></li>
+       
+    </ul>
     </div>
 </main>
