--- a/src/app/topics/observable-vs-promise/observable-vs-promise.component.html
+++ b/src/app/topics/observable-vs-promise/observable-vs-promise.component.html
@@ -11,6 +11,8 @@
               <li><a href="https://itnext.io/javascript-promises-vs-rxjs-observables-de5309583ca2" target="_blank">itnext</a></li>
               <li><a href="https://medium.com/javascript-everyday/javascript-theory-promise-vs-observable-d3087bc1239a" target="_blank">medium</a></li>
               <li><a href="https://levelup.gitconnected.com/rxjs-a-deep-dive-with-angular-8-7fe9fd675aaa" target="_blank">medium</a></li>
+              <li><a href="https://stackoverflow.com/questions/37364973/what-is-the-difference-between-promises-and-observables" target="_blank">stackoverflow</a></li>
+              
           </ul>
         </div>
       </div>
