--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -266,25 +266,25 @@
                     <a [routerLink]="['topics/primitvedatatype']" data-filter-item data-filter-name="primitvedatatype">primitvedatatype</a>
                   </li> 
                   <li>
-                    <a  class="unfinished" [routerLink]="['topics/promiseall']" data-filter-item data-filter-name="promiseall">promiseall</a>
+                    <a [routerLink]="['topics/promiseall']" data-filter-item data-filter-name="promiseall">promiseall</a>
                   </li> 
                   <li>
                     <a  class="unfinished" [routerLink]="['topics/questions']" data-filter-item data-filter-name="questions">questions</a>
                   </li> 
                   <li>
-                    <a  class="unfinished" [routerLink]="['topics/typecoeriction']" data-filter-item data-filter-name="typecoeriction">typecoeriction</a>
+                    <a [routerLink]="['topics/typecoeriction']" data-filter-item data-filter-name="typecoeriction">typecoeriction</a>
                   </li> 
                   <li>
-                    <a  class="unfinished" [routerLink]="['topics/valuetypereftype']" data-filter-item data-filter-name="valuetypereftype">valuetypereftype</a>
+                    <a [routerLink]="['topics/valuetypereftype']" data-filter-item data-filter-name="valuetypereftype">valuetypereftype</a>
                   </li>
                   <li>
-                    <a  class="unfinished" [routerLink]="['topics/pureimpurepipe']" data-filter-item data-filter-name="pureimpurepipe">pureimpurepipe</a>
+                    <a [routerLink]="['topics/pureimpurepipe']" data-filter-item data-filter-name="pureimpurepipe">pureimpurepipe</a>
                   </li>
                   <li>
-                    <a  class="unfinished" [routerLink]="['topics/pureimpurefunctions']" data-filter-item data-filter-name="pureimpurefunctions">pureimpurefunctions</a>
+                    <a [routerLink]="['topics/pureimpurefunctions']" data-filter-item data-filter-name="pureimpurefunctions">pureimpurefunctions</a>
                   </li>
                   <li>
-                    <a  class="unfinished" [routerLink]="['topics/passbyvalvsref']" data-filter-item data-filter-name="passbyvalvsref">passbyvalvsref</a>
+                    <a [routerLink]="['topics/passbyvalvsref']" data-filter-item data-filter-name="passbyvalvsref">passbyvalvsref</a>
                   </li>
                   <li>
                     <a  class="unfinished" [routerLink]="['topics/callback']" data-filter-item data-filter-name="callback">callback</a>
