--- a/src/app/topics/pureimpurefunctions/pureimpurefunctions.component.html
+++ b/src/app/topics/pureimpurefunctions/pureimpurefunctions.component.html
@@ -2,5 +2,17 @@
     <div class="container-fluid default-bar">
       <h2>what is pure and impure functions? what are their practical usage? please provide examples</h2>
       <hr>
+
+      <p>A pure function is much easier to comprehend, especially as our codebase may scale, as well as role-based functions that do one job and do it well. Pure functions don’t modify external variables/state/data outside of the scope, and returns the same output given the same input. Therefore it is deemed “pure”.
+      </p>
+      <p>An impure function is a function that mutates variables/state/data outside of it’s lexical scope, thus deeming it “impure” for this reason. There are many ways to write JavaScript, and thinking in terms of impure/pure functions we can write code that is much easier to reason with. 
+      </p>
+
+      <h3 class="mt-4">Usefull links:</h3>
+      <ul>
+          <li><a href="https://www.aanchalgarg.com/2019/08/pure-and-impure-pipes-in-angular.html" target="_blank">aanchalgarg</a></li>
+          <li><a href="https://tutorialsforangular.com/2020/02/11/understanding-pure-vs-impure-pipes-in-angular/" target="_blank">tutorialsforangular</a></li>
+      </ul>
+
     </div>
 </main>
