--- a/src/app/topics/typecoeriction/typecoeriction.component.html
+++ b/src/app/topics/typecoeriction/typecoeriction.component.html
@@ -1,6 +1,16 @@
 <main class="page-content">
     <div class="container-fluid default-bar">
-      <h2>what is type coeriction? what are their practical usage? please provide examples</h2>
+      <h2>what is type coercion? what are their practical usage? please provide examples</h2>
       <hr>
+      <p>Type Coercion is the conversion of one type of object to a new object of a different type with similar content. Tapestry frequently must coerce objects from one type to another. A common example is the coercion of string "5" into an integer 5 or a double 5.0.</p>
+      <p>Type coercion is the process of converting value from one type to another (such as string to number, object to boolean, and so on). Any type, be it primitive or an object, is a valid subject for type coercion. To recall, primitives are: number, string, boolean, null, undefined + Symbol (added in ES6).</p>
+    
+      <hr>
+
+      <h3 class="mt-4">Usefull links:</h3>
+      <ul>
+          <li><a href="https://www.freecodecamp.org/news/js-type-coercion-explained-27ba3d9a2839/" target="_blank">freecodecamp</a></li>
+          <li><a href="https://2ality.com/2019/10/type-coercion.html" target="_blank">2ality</a></li>
+      </ul>
     </div>
 </main>
