--- a/src/app/topics/valuetypereferancetype/valuetypereferancetype.component.html
+++ b/src/app/topics/valuetypereferancetype/valuetypereferancetype.component.html
@@ -2,5 +2,14 @@
     <div class="container-fluid default-bar">
       <h2>what is value type and referance type? what are their practical usage? please provide examples</h2>
       <hr>
+
+      <p>A Value Type holds the data within its own memory allocation and a Reference Type contains a pointer to another memory location that holds the real data. Reference Type variables are stored in the heap while Value Type variables are stored in the stack.</p>
+    
+      <h3 class="mt-4">Usefull links:</h3>
+      <ul>
+          <li><a href="https://www.tutorialsteacher.com/csharp/csharp-value-type-and-reference-type" target="_blank">tutorialsteacher</a></li>
+          <li><a href="http://www.albahari.com/valuevsreftypes.aspx" target="_blank">albahari</a></li>
+      </ul>
+    
     </div>
 </main>
