--- a/src/app/topics/passbyvaluevspassbyref/passbyvaluevspassbyref.component.html
+++ b/src/app/topics/passbyvaluevspassbyref/passbyvaluevspassbyref.component.html
@@ -2,7 +2,13 @@
     <div class="container-fluid default-bar">
       <h2>what is differenace between passbyvalue and passbyreferance? what are their practical usage? please provide examples</h2>
       <hr>
-      <a href="https://medium.com/@rclarke_m/pass-by-value-vs-pass-by-reference-in-javascript-82fa8736c9f7" target="_blank">I read this article here</a>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/B0C49q3sv4Y" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+      <h3 class="mt-4">Usefull links:</h3>
+      <ul>
+          <li><a href="https://courses.washington.edu/css342/zander/css332/passby.html#:~:text=By%20definition%2C%20pass%20by%20value,contents%20of%20the%20actual%20parameter.&text=In%20pass%20by%20reference%20(also,the%20actual%20parameter%20is%20stored." target="_blank">washington</a></li>
+         <li><a href="https://codeburst.io/javascript-passing-by-value-vs-reference-explained-in-plain-english-8d00fd06a47c">codeburst</a></li>
+      </ul>
     </div>
 </main>
  
